修改事故单回复和变更单回复按钮的显示方式

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -296,3 +296,4 @@ en:
   label_http_exception_save_as_file: Save Error Message
   label_http_exception_system_error: System internal error,please contact administrator
   #=========end http error====================
+  label_submit_replay: Subbmit Reply
