修复系统中存在着的一些Bug

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -302,3 +302,4 @@ zh:
   label_http_exception_save_as_file: 保存错误消息到本机
   label_http_exception_system_error: 系统内部错误,请联系管理员
   #=========end http error====================
+  label_submit_replay: 提交回复
