为角色添加分配人员和删除分配人员功能

--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -671,6 +671,7 @@ en:
   label_irm_site_show: Site
   label_action_select_site: Select Site
   label_irm_site: Site
+  label_action_edit_assignment: Add People
   #=========================end irm site_groups_controller=======================#
   #=========================    irm support_groups_controller=======================#
   label_irm_group: Group
