--- a/modules/110_hotline_hli/config/locales/en.yml
+++ b/modules/110_hotline_hli/config/locales/en.yml
@@ -46,3 +46,48 @@ en:
   label_irm_project: Hotline Project
   #========================== end hotline project  ===============================
 
+
+  #======================= Report incident request month summary ============
+  label_report_date_month: Month
+  label_report_incident_request_last_month_unclose: Last Month Unclose
+  label_report_incident_request_this_month_submit: Submitted This Month
+  label_report_incident_request_this_month_close: Closed This Month
+  label_report_incident_request_this_month_unclose: Unclosed This Month
+  #=====================Report incident request month summary end=================
+
+  #======================= Report incident request month processing time ============
+  label_report_submitted_date_and_priority: Submitted Date/Priority
+  #================================================================================
+  #======================= Report incident request month detail ============
+  label_report_incident_request_support: Assign To
+  label_report_incident_request_journal: Journals
+  #================================================================================
+  #========================= incident_amount_by_month_cate report ====================================
+  label_report_icm_incident_category: Category
+  label_report_icm_incident_months: JAN,FEB,MAR,APR,MAY,JUN,JUL,AUG,SEP,OCT,NOV,DEC,Total
+  label_report_icm_incident_total:  Total
+  label_report_icm_incident_params_year:  Year
+  label_report_icm_incident_params_ym_s:  Date From
+  label_report_icm_incident_params_ym_e:  Date To
+  label_report_icm_incident_params_month:  Month
+  label_report_icm_incident_report_date:  Report Date
+  label_report_icm_incident_prior:  Priority
+  #========================== end incident_amount_by_month_cate report  ===============================
+
+  #========================== template report  ===================================
+  message_report_template_subject: 您%{m}的时候在HISMS系统中提交的模板报表请求已经执行完成
+  message_report_template_content: 您%{m}的时候在HISMS系统中提交的模板报表请求已经执行完成。本次递交模板:%{n}，执行参数:%{o}。执行结果请查阅附件。
+  message_report_template_running: 您提交的请求正在执行，执行完毕后，结果会发到您的联系邮箱。您现在可以关闭本页面。
+  #========================== end template report  ===============================
+
+  # reports
+  label_percentage: PCT
+  label_amount: Amount
+  label_total_data_size: Total %{m}
+  label_project: Project
+  label_reporter: Reporter
+  label_report_number: Number
+  label_report_request_submit_date: Reported At
+  label_report_request_last_updated: Last Updated At
+  label_report_request_workload: Workload
+  label_action_show_template: Running template report
