--- a/modules/110_hotline_hli/config/locales/zh.yml
+++ b/modules/110_hotline_hli/config/locales/zh.yml
@@ -47,3 +47,46 @@ zh:
   label_action_add_person: 添加客户账号
   label_irm_project_add_supporter: 添加运维人员
   #========================== end hotline project  ===============================
+
+
+  #======================= Report incident request month summary ============
+  label_report_incident_request_last_month_unclose: 上月未解决数量
+  label_report_incident_request_this_month_submit: 本月接单数量
+  label_report_incident_request_this_month_close: 本月解决数量
+  label_report_incident_request_this_month_unclose: 本月未解决数量
+  label_report_date_month: 统计月份
+  #======================= Report incident request month summary end=========
+
+  #======================= Report incident request month processing time ============
+  label_report_submitted_date_and_priority: 报告日期/优先级
+  #================================================================================
+
+  #========================= incident_amount_by_month_cate report ====================================
+  label_report_icm_incident_category: 类别
+  label_report_icm_incident_months: 一月,二月,三月,四月,五月,六月,七月,八月,九月,十月,十一月,十二月,合计
+  label_report_icm_incident_total:  合计
+  label_report_icm_incident_params_year:  年份
+  label_report_icm_incident_params_ym_s:  月份从
+  label_report_icm_incident_params_ym_e:  月份至
+  label_report_icm_incident_params_month:  月份
+  label_report_icm_incident_report_date:  报告日期
+  label_report_icm_incident_prior:  优先级
+  #========================== end incident_amount_by_month_cate report  ===============================
+
+  #========================== template report  ===================================
+  message_report_template_subject: 您%{m}的时候在HISMS系统中提交的模板报表请求已经执行完成
+  message_report_template_content: 您%{m}的时候在HISMS系统中提交的模板报表请求已经执行完成。本次递交模板:%{n}，执行参数:%{o}。执行结果请查阅附件。
+  message_report_template_running: 您提交的请求正在执行，执行完毕后，结果会发到您的联系邮箱。您现在可以关闭本页面。
+  #========================== end template report  ===============================
+
+  #报表相关
+  label_percentage: 比例
+  label_amount: 数量
+  label_total_data_size: 共 %{m} 条数据
+  label_project: 项目
+  label_reporter: 报告员(请求人)
+  label_report_number: 编号
+  label_report_request_submit_date: 报告日期
+  label_report_request_last_updated: 最后更新
+  label_report_request_workload: 工时
+  label_action_show_template: 模版报表运行中
