fixed: 修正部分问题历史不显示的问题

--- a/modules/20_incident_icm/config/locales/en.yml
+++ b/modules/20_incident_icm/config/locales/en.yml
@@ -259,3 +259,4 @@ en:
   label_icm_incident_sub_category_external_system: System
   label_icm_incident_sub_category_description: Description
   #========================== end incident category  ===============================
+  label_icm_incident_request_watcher: Watcher
