--- a/modules/20_incident_icm/config/locales/zh.yml
+++ b/modules/20_incident_icm/config/locales/zh.yml
@@ -263,3 +263,4 @@ zh:
   label_report_incident_request_support: 分派给
   label_report_incident_request_journal: 解决记录
   #================================================================================
+  label_icm_incident_request_watcher: 跟踪者
