--- a/modules/30_knowledge_skm/config/locales/en.yml
+++ b/modules/30_knowledge_skm/config/locales/en.yml
@@ -114,7 +114,12 @@ en:
   label_skm_entry_header_approve: Approve
   label_skm_entry_header_approve_note_placeholder: Please write some note about the entry header ......
   label_skm_entry_header_button_ok: Approval
+  label_skm_entry_header_button_to: To other people...
   label_skm_entry_header_button_no: Refuse
+  label_skm_entry_header_to_title: Chose at least one people
+  label_skm_entry_header_choice_people: Chose at least one people
+  label_skm_entry_header_to_people: Has hand over to {{person_name}}
+  label_skm_entry_header_to_people_save: Save
   #=========================skm FileManagement================================
   label_skm_file_management: Files
   label_skm_file_list: Files List
