--- a/modules/30_knowledge_skm/config/locales/zh.yml
+++ b/modules/30_knowledge_skm/config/locales/zh.yml
@@ -85,7 +85,12 @@ zh:
   label_skm_entry_header_approve: 审核知识
   label_skm_entry_header_approve_note_placeholder: 请填写审核意见......
   label_skm_entry_header_button_ok: 通过审核
+  label_skm_entry_header_button_to: 转交给...
   label_skm_entry_header_button_no: 拒绝
+  label_skm_entry_header_to_title: 选择转交人
+  label_skm_entry_header_choice_people: 请至少选择一个转交人
+  label_skm_entry_header_to_people: 已经转交给%{person_name}处理
+  label_skm_entry_header_to_people_save: 确定转交
 
   label_skm_my_drafts: 我的草稿
   error_choice_template: 先选择一个模板
