feature: 在标准模块，和HLI模块中，都增加回复编辑功能

--- a/modules/20_incident_icm/config/locales/en.yml
+++ b/modules/20_incident_icm/config/locales/en.yml
@@ -260,3 +260,4 @@ en:
   label_icm_incident_sub_category_description: Description
   #========================== end incident category  ===============================
   label_icm_incident_request_watcher: Watcher
+  label_icm_incident_request_update_journal: Update Reply
