--- a/modules/20_incident_icm/config/locales/zh.yml
+++ b/modules/20_incident_icm/config/locales/zh.yml
@@ -264,3 +264,4 @@ zh:
   label_report_incident_request_journal: 解决记录
   #================================================================================
   label_icm_incident_request_watcher: 跟踪者
+  label_icm_incident_request_update_journal: 更新回复
