--- a/modules/10_ironmine_irm/config/locales/zh.yml
+++ b/modules/10_ironmine_irm/config/locales/zh.yml
@@ -1925,7 +1925,7 @@ zh:
   label_before_one_week: 1 周内
   label_before_one_month: 1 月内
   label_before_one_year: 1 年内
-  label_search_result_count: 共搜到 %{count} 个结果
+  label_search_result_count: 共搜到约 %{count} 个结果
   label_search_options_setting: 搜索内容设置
   label_search_options_time: 搜索时间设置
   label_search_no_result_alert_1: 1、搜索关键词不能为空；
