在事故单页面添加直接创建关联事故单功能

--- a/modules/20_incident_icm/config/locales/en.yml
+++ b/modules/20_incident_icm/config/locales/en.yml
@@ -154,6 +154,8 @@ en:
   label_icm_create_relate_change_request: Change Request
   label_icm_incident_category_apply_system: Apply System
   label_icm_incident_category_system: Category System
+  label_icm_incident_request_relation_new: New Relation Incident
+  label_icm_incident_request_relation_source: Source Incident Request
   label_icm_incident_request_relation_types: Relation Types
   label_icm_incident_request_relation_type: Relation
   label_icm_incident_request_relation: Relation Types
