--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -297,3 +297,4 @@ en:
   label_http_exception_system_error: System internal error,please contact administrator
   #=========end http error====================
   label_submit_replay: Subbmit Reply
+  label_shortcuts_submit_form: After enter content and press <code>Ctrl</code> + <code>Enter</code> to submit form
