为事故单页面返回顶部操作功能

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -298,3 +298,4 @@ en:
   #=========end http error====================
   label_submit_replay: Subbmit Reply
   label_shortcuts_submit_form: After enter content and press <code>Ctrl</code> + <code>Enter</code> to submit form
+  label_go_to_top: Go To Top
