--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -304,3 +304,4 @@ zh:
   #=========end http error====================
   label_submit_replay: 提交回复
   label_shortcuts_submit_form: 输入内容后按<code>Ctrl</code> + <code>Enter</code>键提交表单
+  label_go_to_top: 返回顶部
