feature: 将工时登记纳入最后更新时间考虑范围

--- a/modules/110_hotline_hli/config/locales/en.yml
+++ b/modules/110_hotline_hli/config/locales/en.yml
@@ -91,3 +91,4 @@ en:
   label_report_request_last_updated: Last Updated At
   label_report_request_workload: Workload
   label_action_show_template: Running template report
+  label_icm_incident_request_update_workload: Update Workload
