--- a/modules/60_config_com/config/locales/zh.yml
+++ b/modules/60_config_com/config/locales/zh.yml
@@ -49,6 +49,7 @@ zh:
   label_com_config_item_last_checked_at: 上一次扫描时间
   label_com_config_item_error_no_such_attribute: 没有这个ID的属性
   label_com_config_item_error_value_required: %{name}：值不能为空
+  label_com_config_item_config_status: 配置状态
   #===========================end config item==============================#
 
 
@@ -70,4 +71,6 @@ zh:
   label_com_config_item_status_close_flag: 关闭
   label_com_config_item_status_default_flag: 默认
   label_com_config_item_status_show: 查看配置分类
+  label_com_status_description: 状态描述
+  label_com_close_flag: 关闭标记
   #=========================end com config item status=======================#
