解决在IE6上一些列的问题

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -171,8 +171,8 @@ zh:
   label_action_multilingual_edit: 多语言编辑
   label_action_multilingual_update: 多语言编辑
   label_reply_title: 于%{date_format}(%{time_distance}前)回复
-  label_more_info: 更多信息
-  label_less_info: 更少信息
+  label_more_info: 更多
+  label_less_info: 更少
   #=========paginator==============
   paginator_record: 记录数
   paginator_rowperpage: 每页显示
