1、升级bootstrap到最新版本； 2、修改看板页面，添加手动刷新和禁用自动刷新功能，添加可选自动刷新间隔时间

--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -6,6 +6,10 @@ en:
   invalid_invitation_key: Invalid invitation key!
   current_page_help: Current page help
   #usual button
+  fresh: Resh
+  after_n_fresh: Auto refresh in %{n} seconds
+  not_auto_refresh: Not auto refresh
+  fresh_time: Setting fresh time
   result: Result
   export: Export
   export_xls: Export Excel
