菜单查看页面添加树形展示功能

--- a/modules/10_ironmine_irm/config/locales/en.yml
+++ b/modules/10_ironmine_irm/config/locales/en.yml
@@ -252,6 +252,7 @@ en:
   label_irm_menu_new: Create Menu
   label_irm_menu_edit: Edit Menu
   label_irm_menu_list: Menus List
+  label_irm_menu_structure: Menus Tree
   label_irm_menu_menu_code: Menu Code
   label_irm_menu_icon: Icon
   label_irm_menu_name: Name
