--- a/modules/10_ironmine_irm/config/locales/zh.yml
+++ b/modules/10_ironmine_irm/config/locales/zh.yml
@@ -243,6 +243,7 @@ zh:
   label_irm_menu_new: 创建菜单
   label_irm_menu_edit: 编辑菜单
   label_irm_menu_list: 菜单列表
+  label_irm_menu_structure: 菜单层次结构
   label_irm_menu_menu_code: 菜单编码
   label_irm_menu_icon: 图标
   label_irm_menu_name: 名称
