--- a/modules/10_ironmine_irm/config/locales/zh.yml
+++ b/modules/10_ironmine_irm/config/locales/zh.yml
@@ -348,7 +348,7 @@ zh:
   label_irm_ldap_source_port: 端口
   label_irm_ldap_source_account: 账户
   label_irm_ldap_source_account_password: 密码
-  label_irm_ldap_source_base_dn: 基准DN
+  label_irm_ldap_source_base_dn: 域名
   label_irm_ldap_source_attr_login: 用户名属性
   label_irm_ldap_source_attr_firstname: 名属性
   label_irm_ldap_source_attr_lastname: 姓属性
